--- a/movies/src/pages/popular/popular.html
+++ b/movies/src/pages/popular/popular.html
@@ -5,14 +5,21 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>popular</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Filmes Populares</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+    <button ion-item *ngFor="let filme of (filmes | async)?.results">
+      <p>
+        <img align="left" width="80" height="80" src="{{url_images_w300}}{{filme.poster_path}}">
+        <strong>{{filme.title}}</strong>
+        <br>{{filme.overview}}</p>
+    </button>
+  </ion-list>
 </ion-content>
